# intake_sdmx

./: .gitignore  README.rst  demo.py  intake_sdmx.py  pyproject.toml
doc/: api.rst  conf.py  example.rst  index.rst  install.rst  license.rst  tutorial.rst  user_guide.rst  whatsnew.rst
test/: test_basics.py  test_ecb.py
test/data/: ecb_dataflows.xml  exr_data.xml  exr_flow.xml
